# agent-builder-rs

./: .env  .gitignore  Cargo.toml  README.md
.github/: CODEOWNERS
docs/: importing-components.md
plugins/esql-assistant/: manifest.yaml
plugins/esql-assistant/skills/esql-optimizer/: SKILL.md  common-patterns.md
plugins/esql-assistant/skills/esql-query-writer/: SKILL.md
skills/dashboard-builder/: dashboard-builder.md  dashboard-builder.yaml  visualization-guide.md
skills/incident-response/: incident-response.md  incident-response.yaml  runbook.md
skills/slack-and-github/: slack-and-github.md  slack-and-github.yaml  sml-reference.md
skills/threat-intel-enrichment/: ioc-patterns.md  severity-matrix.md  threat-intel-enrichment.md  threat-intel-enrichment.yaml
src/: agent_builder.rs  agentbuilder.rs  app.rs  config.rs  github.rs  lib.rs  main.rs  theme.rs
src/elm/: cmd.rs  mod.rs  model.rs  msg.rs  update.rs  view.rs
themes/: elastic-borealis.yaml
tools/: esql-user-lookup.yaml  index-search-security-logs.yaml  workflow-alert-enrichment.yaml
