[package]
name = "agent-builder-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
ratatui = { version = "0.30", features = ["unstable-widget-ref"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ratatui-explorer = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }
